#13843: bugfix: Horizontal scroll bar creates a gap when Duplicate nodes are detected and extra sorting columns are selected in FM

--- a/css/style.css
+++ b/css/style.css
@@ -30345,13 +30345,13 @@ body.megaChatDisabled .nw-fm-left-icon.conversations, body.megaChatDisabled .fm-
 }
 .duplication-found .grid-scrolling-table {
     height: 100%;
-    height: -webkit-calc(100% - 64px);
-    height: -moz-calc(100% - 64px);
-    height: calc(100% - 64px);
+    height: -webkit-calc(100% - 48px);
+    height: -moz-calc(100% - 48px);
+    height: calc(100% - 48px);
 }
 .select.duplication-found .grid-scrolling-table {
     height: 100%;
-    height: -webkit-calc(100% - 110px);
-    height: -moz-calc(100% - 110px);
-    height: calc(100% - 110px);
+    height: -webkit-calc(100% - 83px);
+    height: -moz-calc(100% - 83px);
+    height: calc(100% - 83px);
 }
